<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.checkout.CheckoutListActivity">

    <androidx.constraintlayout.widget.Placeholder
        android:id="@+id/checkout_list_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintWidth_max="640dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/checkout_list_icon"
        android:src="@drawable/ic_credit_card"
        android:contentDescription="@string/app_name"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintBottom_toTopOf="@+id/checkout_list_input_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/checkout_list_guideline"/>

    <TextView
        android:id="@+id/checkout_list_title"
        android:text="@string/checkout_list_title"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/checkout_list_icon"
        app:layout_constraintRight_toRightOf="@+id/checkout_list_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="@+id/checkout_list_icon"
        app:layout_constraintBottom_toTopOf="@+id/checkout_list_subtitle"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/checkout_list_subtitle"
        android:text="@string/checkout_list_subtitle"
        style="@style/TextAppearance.Material3.TitleSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@id/checkout_list_title"
        app:layout_constraintBottom_toBottomOf="@+id/checkout_list_icon"
        app:layout_constraintLeft_toLeftOf="@+id/checkout_list_title"
        app:layout_constraintRight_toRightOf="@+id/checkout_list_guideline"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/checkout_list_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:hint="@string/checkout_list_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        app:layout_constraintTop_toBottomOf="@+id/checkout_list_icon"
        app:layout_constraintBottom_toTopOf="@id/checkout_list_button"
        app:layout_constraintLeft_toLeftOf="@id/checkout_list_guideline"
        app:layout_constraintRight_toRightOf="@id/checkout_list_guideline">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/checkout_list_autocomplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/checkout_list_button"
        android:text="@string/action_find"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/checkout_list_input_layout"
        app:layout_constraintLeft_toLeftOf="@id/checkout_list_guideline"
        app:layout_constraintRight_toRightOf="@id/checkout_list_guideline"
        app:layout_constraintBottom_toTopOf="@id/checkout_list_error"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/checkout_list_progress"
        android:indeterminate="true"
        app:layout_constraintTop_toTopOf="@+id/checkout_list_input_layout"
        app:layout_constraintBottom_toBottomOf="@+id/checkout_list_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/checkout_list_error"
        android:text="@string/checkout_list_error"
        android:textAlignment="center"
        android:drawableStart="@drawable/ic_error"
        android:drawableTint="?attr/colorError"
        android:drawablePadding="12dp"
        android:textColor="?attr/colorError"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/checkout_list_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/checkout_list_guideline"
        app:layout_constraintRight_toRightOf="@id/checkout_list_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:targetApi="m" />

</androidx.constraintlayout.widget.ConstraintLayout>